--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,17 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
-	<p class="notice"><%= notice %></p>
+  <body class="container">
+    <% if notice || alert %>
+	     <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
-	<%= yield %>
+    <% end %>
+
+    <%= render 'shared/navbar' %>
+	 <%= yield %>
   </body>
 </html>
